[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/pause-menu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/roboto/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/GUI/options/options.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/PhotoCamera/PhotoCamera.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="main"]
margin_left = 823.0
margin_top = 382.0
margin_right = 1096.0
margin_bottom = 698.0
grow_horizontal = 0

[node name="Continue" type="LinkButton" parent="main/VBoxContainer"]
margin_right = 273.0
margin_bottom = 60.0
focus_mode = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.921569, 1, 0, 1 )
enabled_focus_mode = 2
text = "Continue"
underline = 2

[node name="Restart" type="LinkButton" parent="main/VBoxContainer"]
margin_top = 64.0
margin_right = 273.0
margin_bottom = 124.0
focus_mode = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.921569, 1, 0, 1 )
enabled_focus_mode = 2
text = "Restart"
underline = 2

[node name="Options" type="LinkButton" parent="main/VBoxContainer"]
margin_top = 128.0
margin_right = 273.0
margin_bottom = 188.0
focus_mode = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.921569, 1, 0, 1 )
enabled_focus_mode = 2
text = "Options"
underline = 2

[node name="Photo" type="LinkButton" parent="main/VBoxContainer"]
margin_top = 192.0
margin_right = 273.0
margin_bottom = 252.0
focus_mode = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.921569, 1, 0, 1 )
enabled_focus_mode = 2
text = "Photo Mode"
underline = 2

[node name="Exit" type="LinkButton" parent="main/VBoxContainer"]
margin_top = 256.0
margin_right = 273.0
margin_bottom = 316.0
focus_mode = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.921569, 1, 0, 1 )
enabled_focus_mode = 2
text = "Exit"
underline = 2

[node name="Options" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Camera" parent="." instance=ExtResource( 4 )]
visible = false
far = 1000.0
joyMoveSensitivity = 10.0
zoomSensitivity = 20.0
flyspeed = 200.0
output_path = "user://"
[connection signal="pressed" from="main/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="main/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="main/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="main/VBoxContainer/Photo" to="." method="_on_Photo_pressed"]
[connection signal="pressed" from="main/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="back_settings" from="Options" to="." method="_on_Options_back_settings"]
[connection signal="visibility_changed" from="Options" to="." method="_on_Options_visibility_changed"]
